# Android-Virtual-Machine

./: .gitignore  CLAUDE.md  README.md  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/debug/assets/guest/: androidfs_7.1.2_arm64_debug.manifest.json  androidfs_7.1.2_arm64_debug.sha256
app/src/debug/java/dev/jongwoo/androidvm/debug/: PhaseDiagnosticProbes.kt  Stage4DiagnosticsReceiver.kt  Stage5DiagnosticsReceiver.kt  Stage6DiagnosticsReceiver.kt  Stage7DiagnosticsReceiver.kt  Stage7RegressionRunner.kt  (+5 more)
app/src/main/: AndroidManifest.xml
app/src/main/assets/guest/: README.md
app/src/main/cpp/: CMakeLists.txt  vm_native_bridge.cpp
app/src/main/cpp/binder/: binder_device.cpp  binder_device.h  parcel.cpp  parcel.h  service_manager.cpp  service_manager.h  thread_pool.cpp  thread_pool.h  transaction.cpp  transaction.h
app/src/main/cpp/core/: event_loop.cpp  instance.cpp  instance.h  logging.cpp  logging.h
app/src/main/cpp/device/: ashmem.cpp  ashmem.h  audio_device.cpp  composer.cpp  composer.h  gralloc.cpp  gralloc.h  graphics_device.cpp  input_device.cpp
app/src/main/cpp/jni/: phase_b_bridge.cpp  vm_native_bridge.cpp
app/src/main/cpp/loader/: aux_vector.cpp  aux_vector.h  elf_loader.cpp  elf_loader.h  guest_process.cpp  guest_process.h  linker_bridge.cpp  linker_bridge.h
app/src/main/cpp/property/: build_props.cpp  build_props.h  property_area.cpp  property_area.h  property_service.cpp  property_service.h
app/src/main/cpp/syscall/: futex.cpp  futex.h  io.cpp  mem.cpp  process.cpp  process.h  signal.cpp  signal.h  socket.cpp  socket.h  syscall_dispatch.cpp  syscall_dispatch.h  time.cpp
app/src/main/cpp/vfs/: fd_table.cpp  path_resolver.cpp
app/src/main/java/dev/jongwoo/androidvm/: MainApplication.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
docs/planning/: VPHONEOS_CLEANROOM_IMPLEMENTATION_PLAN.md  future-roadmap.md  phase-a-host-shell.md  phase-b-guest-runtime-poc.md  phase-c-android-boot.md  phase-d-usable-vm.md  phase-e-compatibility.md  post-stage7-roadmap.md  pre_stage6_readiness.md  stage-01-mvp-scope.md  stage-02-host-apk.md  stage-03-rom-image-pipeline.md  stage-04-native-runtime.md  stage-05-graphics-input.md  stage-06-apk-install-launch.md  stage-07-permission-bridges.md
tools/: create_debug_guest_fixture.sh
(+172 files in other folders)
